Add Style, comments, github links, ...

--- a/index.html
+++ b/index.html
@@ -28,16 +28,25 @@
          }
 
          #draggables > span.dragOver {
+            border-color:#44ee55;
             background-color:#ddffd7;
          }
 
          #draggables > span.dragging {
-            opacity: 0.3;
+            opacity: 0.6;
+         }
+
+         p {
+            max-width:600px;
+            text-align:justify;
          }
       </style>
    </head>
    <body>
       <h1>draggables-js</h1>
+      <h4>lightweight and low resource drag/drop</h4>
+      <a href='https://github.com/iFixit/draggables-js'>Github</a>
+      <a href="http://github.com/iFixit/draggables-js"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://a248.e.akamai.net/assets.github.com/img/7afbc8b248c68eb468279e8c17986ad46549fb71/687474703a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f6461726b626c75655f3132313632312e706e67" alt="Fork me on GitHub"></a>
       <p>
          1000 elements that can be drug and dropped on eachother.  Only 1 event
          event handler for each type (yay event bubbling). This takes little to no
